updated dependencies and methods to CloudNet RC14.